--- a/slides_2.html
+++ b/slides_2.html
@@ -52,12 +52,12 @@
 				<a class="carousel-control-prev">
 					<big>
 						<span class="carousel-control-prev-icon" aria-hidden="true" href="#carouselExampleIndicators" role="button" data-slide="prev"></span>
-					<span class="sr-only">Previous</span>
+					<span class="sr-only"></span>
 					</big>
 				</a>
 				<a class="carousel-control-next">
 					<span class="carousel-control-next-icon" aria-hidden="true" href="#carouselExampleIndicators" role="button" data-slide="next"></span>
-					<span class="sr-only">Next</span>
+					<span class="sr-only"></span>
 				</a>
 			</div>
 		</section>
@@ -73,7 +73,7 @@
 							</button>
 						</div>
 						<div class="modal-body" id="modal-body-record">
-							<div class="container">
+							<div class="container" id="recorder-container">
 								<div class="row text-center justify-content-md-center align-self-center">
 									<div class="col col-12 col-md-12">
 										<video id="gum" playsinline autoplay muted></video>
@@ -99,7 +99,7 @@
 				<div class="modal-content" style="width: 48px">
 					<div class="text-center">
 						<div class="spinner-border" role="status">
-							<span class="sr-only">Loading...</span>
+							<span class="sr-only"></span>
 						</div>
 					</div>
 				</div>
