--- a/slides_2.html
+++ b/slides_2.html
@@ -42,7 +42,8 @@
 			</div>
 		</nav>
 		<section class="page-section slides-section bg-primary mb-0" id="slides">
-			<div class="container slides-container overflow-hidden">
+			<div class="container slides-container">
+				<!--  overflow-hidden -->
 				<div id="carouselExampleIndicators" class="carousel carousel-custom slide" data-interval="false">
 
 					<div class="carousel-inner">
